--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "pg-hstore": "^2.3.2",
     "ramda": "^0.24.1",
     "sequelize": "^4.4.2",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "socket.io": "^2.0.3"
   },
   "main": "index.js",
   "license": "MIT"
